# resolvething

./: .gitignore  CRUSH.md  Cargo.toml  README.md  resolvething.sh
.idx/: dev.nix
src/: app.rs  cli.rs  config.rs  conflict.rs  conflictfinder.rs  diff.rs  duplicates.rs  fdupes_runner.rs  fzf.rs  lib.rs  main.rs  trash.rs
