[package]
name = "resolvething"
version = "0.5.2"
edition = "2024"
license = "GPL-2.0"
keywords = ["syncthing"]
categories = ["command-line-utilities"]
description = "A CLI tool to resolve syncthing conflicts and duplicate files"
repository = "https://github.com/paperbenni/resolvething"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
termsize = "0.1.9"
toml = "0.8.20"
walkdir = "2.5.0"
which = "7.0.3"
